# BaseSDK_python_wrapper

./: .gitignore  README.md  pyproject.toml  setup.py  zense_cam_api.py  zense_cam_demo.py
scripts/: zense_cam_api.py
