[tool.poetry]
name = "basesdk_python_wrapper"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
