[tool.poetry]
name = "basesdk_python_wrapper"
version = "0.1.0"
description = ""
authors = ["Yuki Yoshikawa <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.20"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
